# zephyr

boards/arm/rapidiot_k64/: Kconfig  Kconfig.board  Kconfig.defconfig  pinmux.c  rapidiot_k64.dts  rapidiot_k64.yaml  rapidiot_k64_defconfig
boards/arm/rapidiot_kw41z/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  pinmux.c  rapidiot_kw41z.dts  rapidiot_kw41z.yaml  rapidiot_kw41z_defconfig
ext/lib/lorawan/: CMakeLists.txt  LICENSE.txt  README
ext/lib/lorawan/mac/: CMakeLists.txt
ext/lib/lorawan/radio/: CMakeLists.txt
samples/bluetooth/st_ble_sensor/src/: button_svc.c  led_svc.c  main.c
samples/net/sockets/echo_client_ipv6/: CMakeLists.txt  README.md  overlay-ot.conf  prj.conf
samples/net/sockets/echo_client_ipv6/boards/: nrf52840_pca10056.conf
samples/net/sockets/echo_client_ipv6/src/: ca_certificate.h  echo-client.c  tcp.c
subsys/net/ip/: net_context.c
subsys/net/l2/openthread/: Kconfig  openthread.c
subsys/net/lib/sockets/: sockets.c
